--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   api:
-    image: zacadaaa/skypro_smalenko_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: edenerus/homework26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 80:80
     volumes:
@@ -13,7 +13,7 @@ services:
       migrations:
         condition: service_completed_successfully
   migrations:
-    image: zacadaaa/skypro_smalenko_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: edenerus/homework26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     volumes:
       - ./docker_config.py:/code/default_config.py
     depends_on:
