--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -39,7 +39,7 @@ jobs:
       - name: deploy app
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.HOSTING }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
