--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,7 +30,7 @@ jobs:
       - name: copy files to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.HOSTING }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           source: "deploy/docker-compose.yaml,deploy/docker_config.py"
