--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -8,17 +8,17 @@ services:
     volumes:
       - ./docker_config.py:/code/default_config.py
     depends_on:
-      pg:
-        condition: service_healthy
+     # pg:
+        #condition: service_healthy
       migrations:
         condition: service_completed_successfully
   migrations:
     image: edenerus/homework26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     volumes:
       - ./docker_config.py:/code/default_config.py
-    depends_on:
-      pg:
-        condition: service_healthy
+    #depends_on:
+      #pg:
+        #condition: service_healthy
     command: flask db upgrade
 
   pg:
@@ -30,9 +30,9 @@ services:
       POSTGRES_DB: $DB_NAME
     volumes:
       - ./pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    #healthcheck:
+      #test: ["CMD-SHELL", "pg_isready -U postgres"]
+      #interval: 10s
+      #timeout: 5s
+      #retries: 5
 
